k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: demo6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      nodeSelector:
        kubernetes.io/hostname: ubuntu
      containers:
        - name: redis
          image: redis:7-alpine
          imagePullPolicy: Never
          command: ["redis-server", "--requirepass", "demo6_redis_pwd", "--maxmemory", "128mb", "--maxmemory-policy", "allkeys-lru"]
          ports:
            - containerPort: 6379
          readinessProbe:
            exec:
              command: ["redis-cli", "-a", "demo6_redis_pwd", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: demo6
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
